objects/Log_Headers__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Log Headers</relationshipLabel>
        <relationshipName>Customer_Win_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product2Ids__c</fullName>
        <description>These are product to Ids of Opty Line Items for the corresponding Opportunities</description>
        <label>Product2Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>productFamilyids__c</fullName>
        <label>productFamilyids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Log Headers</label>
    <nameField>
        <label>Log Header</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>